# fast-slides

./: .gitignore  AGENTS.md
fastslides-desktop/: README.md  package-lock.json  package.json  test-icons.ts
fastslides-desktop/app/: design-tokens.ts  globals.css  layout.tsx  page.tsx
fastslides-desktop/app/components/overlays/: AssetLightbox.tsx
fastslides-desktop/app/components/settings/: SettingsOverlay.tsx
fastslides-desktop/app/components/sidebar/: AppSidebar.tsx  ProjectList.tsx  ProjectListItem.tsx  SidebarResizer.tsx  SidebarToggleButton.tsx  types.ts
fastslides-desktop/app/components/workspace/: PreviewModeDock.tsx  PreviewWorkspace.tsx  SlideTocRail.tsx
fastslides-desktop/src-tauri/: Cargo.toml  tauri.conf.json
fastslides-desktop/src-tauri/icons/: icon.icns
fastslides-desktop/src-tauri/src/: lib.rs  main.rs
projects/code-mermaid-lab/: page.mdx  slides.css
projects/tauri-is-awesome/: page.mdx  slides.css
skills/fastslides/: SKILL.md
skills/fastslides/agents/: openai.yaml
skills/fastslides/references/: deck_mdx_runtime.md  layout_best_practices.md  visual_inspection.md
skills/fastslides/scripts/: asset_audit.py  fastslides.sh  init_deck_project.sh  inspect_slide.sh  path_utils.py  scaffold_deck_project.py  validate_deck_project.py
