[package]
name = "fastslides_desktop"
version = "0.1.0"
description = "FastSlides desktop inspector"
authors = ["kristianernst"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "fastslides_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = ["macos-private-api"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
window-vibrancy = "0.7.1"
regex = "1.12"
tiny_http = "0.12"
url = "2.5"
base64 = "0.22"
